        - re-ordered log entries at the point the tester goes into listen state
          (closes #197)
        - wrap code lines > 80 cols
        - reduced the number of calls to Git::name() in Tester::listen().
          Instead of making numerous repeated calls, we now just stash a single
          call into a variable (closes #196)

2.16    2017-04-21
        - remove the named loop in Dispatch::_fork() (closes #188)
        - changed all calls to die() to croak() (closes #189)
        - in doc and help screen, specify 5.8.9 specifically as the lowest
          version of perl we'll use if --legacy isn't sent in (closes #190)
        - --auto mode for the dispatcher now defaults to 0 (closes #192)
        - fix issue in Dispatch where if we have to set --auto to 0, we were
          using the wrong variable rendering early exit 
        - finished the auto-test (--csum) code in tester/Tester to skip the
          checking of repository checksums before deciding whether a test run
          should proceed
        - now that we've decided not to use plugins for --auto, removed an if()
          clause that was in place for that purpose
        - in Tester, --csum now is properly passed along when in background
          (start) mode
        - --auto, --csum and --rpi mode all work correctly

2.15    2017-04-12
        - fixed issue in Git::revision() where we weren't actually checking the
          remote commit SHA1 sum correctly
        - all log objects reflect the module short name, not the full module
          path (closes #176)
        - moved all auto repo checking and comparisons to Tester
        - repo param must be sent in to bbdispatch when running in auto mode
          (fixes #176)
        - added -a|--auto flag to tester. This must be set when running dispatch
          in auto mode (closes #177)
        - clean up erroneous and incorrect error in logs about brewbuild args in
          auto mode if nothing is returned from the tester